update BLOG TO FINAL, or now looks good

--- a/archive/TODO/blogposts/enigma-opis.mdx
+++ b/archive/TODO/blogposts/enigma-opis.mdx
@@ -102,6 +102,7 @@ Zapadki.
 - Wirtualna Polska ["Sekrety maszyn szyfrujących [Enigma]" [YT 16:50]](https://www.youtube.com/watch?v=N9sLPtJDcbY)
 - ledermueller ["Enigma Machine Mechanism (feat. a 'Double Step')" [YT 0:39]](https://www.youtube.com/watch?v=hcVhQeZ5gI4)
 - Gideon Samid ["The ENIGMA of Modern Cryptography" [YT 8:05]](https://www.youtube.com/watch?v=ShOnhOGRXHk)
+- Megaprojects ["The Enigma Machine: The Totally, Definitely, Absolutely Unbreakable Sequence of German War Codes" [YT 18:03]](https://www.youtube.com/watch?v=mHy6sdHHtDI)
 
 #### YT Bletchley Park i Alan Turing
 
