--- a/src/content/fbarticles/japonia-1945.mdx
+++ b/src/content/fbarticles/japonia-1945.mdx
@@ -217,6 +217,7 @@ Możliwe, że zadaniem tej grupy bojowej było odciągnięcie uwagi Amerykanów 
 
 - Military History not Visualized ["Yamato: Why not saved to defend Japan?" [YT 13:45]](https://www.youtube.com/watch?v=5osfQil1fn0)
 - The Front ["Why the Japanese Navy and Army HATED Each other" [YT 12:35]](https://www.youtube.com/watch?v=N1L9J6D-ggE)
+- Megaprojects ["Yamato Class: The Heaviest Battleships Ever Constructed" [YT 17:59]](https://www.youtube.com/watch?v=hS4uoPz_A00)
 - [Imperial Japanese Navy Page](http://www.combinedfleet.com/kaigun.htm)
 
 ![Yamato tonie](../img/Battleship_Yamato_under_air_attack_April_1945.jpg)
