--- a/src/content/fbarticles/panstwo-hitlerowskie.mdx
+++ b/src/content/fbarticles/panstwo-hitlerowskie.mdx
@@ -128,6 +128,12 @@ Liczba publicznych wystąpień Hitlera latami:
 - 1944 3 (1 lipca mowa na pogrzebie generała Eduarda Dietla, oraz 4 lipca spotkanie z 200 przedstawicielami przemysłu w hotelu "Platterhof" w Obersalzbergu)
 - 1945 2 (mowa noworoczna i 30 stycznia)
 
+### Propaganda
+
+>Dlaczego ta "demokratyczna" prasa, uzależniona od ośrodków zagranicznych, nie dostrzega tego, jak wspaniale zmieniamy ten kraj? Dlaczego nie potrafi dostrzec, jak wiele pomocy dają nasze programy socjalne, jak bardzo zmniejszyliśmy bezrobocie, jak przywracamy moralność po tym bałaganie stworzonym przez naszych poprzedników?
+
+7 lutego 1934 Goebbels, przemówienie przed prezydium Izby Kultury Rzeszy ["Jak w Niemczech „regermanizowano” prasę"](https://www.rp.pl/Historia/201019526-Jak-w-Niemczech-regermanizowano-prase.html)
+
 ### Hitlerjugend
 
 >Wszystko co słabe, musi odpaść pod uderzeniami młota. W zamkach mego zakonu będzie wyrastać młodzież, która napełni świat przerażeniem. Chcę młodzieży gwałtownej, władczej, nieustraszonej i okrutnej. Te wszystkie cechy musi posiadać młodzież. Musi umieć znosić ból. Nie może mieć w sobie nic słabego ani czułego. Wolny, wspaniały drapieżnik musi  znowu błyskać z jej oczu. Silną i piękną chcę mieć moją młodzież [...] Tylko z nią będę w stanie stworzyć to co nowe.
