--- a/src/content/pagearticles/kryptologia-aneks.mdx
+++ b/src/content/pagearticles/kryptologia-aneks.mdx
@@ -778,7 +778,7 @@ W nawiasie oryginalny tytuł i data pierwszego wydania.
 - Bruce Schneier "Kryptografia dla praktyków", WNT 2002, s 900; ISBN: 83-204-2678-2 ("Applied Cryptography. Second Edition", 1996)
 - Niels Ferguson, Bruce Schneier "Kryptografia w praktyce", Helion 2004, s 296; ISBN: 83-7361-211-4 ("Practical Cryptography", 2003)
 - David Kahn "Łamacze kodów. Historia kryptologii", Zysk i S-ka 2019, s 1762; ISBN: 978-83-8116-632-4 ("The Codebreakers: The Comprehensive History of Secret Communication from Ancient Times to the Internet", 1996)
-- Douglas Stinson "Kryptografia. W teorii i praktyce", WNT 2005, s 438, ISBN: 83-204-2982-X
+- Douglas Stinson, Maura Paterson ["Kryptografia W teorii i praktyce" wydanie IV](https://ksiegarnia.pwn.pl/Kryptografia-W-teorii-i-praktyce,897655934,p.html), Wydawnictwo Naukowe PWN 2021, s 560, EAN: 9788301216672
 - [Al Sweigart "Cracking Codes with Python" 2018](https://inventwithpython.com/cracking/)
 
 Inne:
