--- a/archive/TODO/articles/berlin.mdx
+++ b/archive/TODO/articles/berlin.mdx
@@ -2089,5 +2089,6 @@ Wciąż trwała ewakuacja 12 Armii Wencka, dziś obszar na którym się bronili 
 
 - Eastory ["Eastern Front of WWII animated: 1944/1945" [YT 17:05]](https://www.youtube.com/watch?v=-AUdP-QVEKA)
 - [Stadtplan von Berlin 1:25.000 [1944]](https://www.landkartenarchiv.de/historischestadtplaene2.php?q=landkartenarchiv_berlin_25T_1944)
-
+- Real Engineering ["The WW2 Towers That Defeated the Soviets" [YT 8:51]](https://www.youtube.com/watch?v=n3n0gKLn84k)
+- Military History Visualized ["Flak Towers - Flaktürme" [YT 7:55]](https://www.youtube.com/watch?v=6jgvkzD8d3k)
 
