change name of blogpost file

--- a/archive/TODO/blogposts/gatsby-css.mdx
+++ b/archive/TODO/blogposts/gatsby-css.mdx
@@ -8,6 +8,8 @@ image: ../images/Gatsby_Monogram.png
 tags: react, gatsby, css
 ---
 
+- Chris Coyier [The Differing Perspectives on CSS-in-JS](https://css-tricks.com/the-differing-perspectives-on-css-in-js/)
+
 ### Layout.css
 
 - [Standard Styling with Global CSS Files](https://www.gatsbyjs.com/docs/how-to/styling/global-css/)
@@ -28,13 +30,4 @@ tags: react, gatsby, css
 - Adebiyi Adedotun [10 Gatsby styling methods](https://blog.logrocket.com/10-gatsby-styling-methods/)
 - Arley McBlain [Saving the Day with Scoped CSS](https://css-tricks.com/saving-the-day-with-scoped-css/)
 
-Global CSS (without a layout component)
-Global CSS (with a layout component)
-CSS Modules
-Stylus
-SCSS
-SASS
-Emotion
-Styled Components
-Bulma
-Less
+#### Global CSS (without a layout component)
