--- a/src/content/fbarticles/japonia-bron.mdx
+++ b/src/content/fbarticles/japonia-bron.mdx
@@ -291,6 +291,24 @@ Na wieść o kapitulacji Japończycy popełnili samobójstwo przedawkowując śr
 
 - [Mysterious Cargo – U 234](http://dubm.de/en/mysterious-cargo-u-234/)
 
+### Japoński Tygrys
+
+FBTODO
+
+In April 1943 the Japanese sent 12 army officers led by Colonel Ishide to Germany to inspect and test their latest tank designs. The Japanese where quite impressed and negotiated to buy four of the tanks and their related documents and blueprints, the PzKfw III Ausf.J, PzKfw III Ausf.N, PzKfw V Panther Ausf.D and PzKfw VI Tiger. They hoped that they could be reverse engineered and the technology incorporated into Japanese designs. One of the PzKfw III's was dissembled and along with the documents transported back to Japan via submarine. February 1944 the Tiger tank was moved to Bordeaux in France so it could be prepared for transport. With the worsening war situation and then the Allied Landings in France it became impossible to transport the tank to Japan. In September 1944 the Japanese decided to give the tank back to the Germans where it was soon destroyed fighting in Belgium.
+
+During World War II, Imperial Japan’s forces put an emphasis on naval and aerial warfare due to islands separated by water. Although Japan had a number of tanks they were never the main focus of the military. However, the threat of an Allied invasion of the Japanese mainland was ever present and Japan wanted to make sure they were prepared with the best tanks around.
+
+Arguably the best tanks of WWII were the German tanks used by Nazi Germany’s forces in the Blitzkrieg. So in 1943, a group of Imperial Japanese officers was dispatched to Germany to inspect their selection of tanks. The group’s leader Colonel Ishide was impressed by the performance of the Tiger tanks and purchased four of them as well as technical documents to construct them.
+
+
+However, large tanks were met with large problems by the forces of Imperial Japan. The most ever-present issue was transporting a 30-ton tank to a combat zone were are typically divided by islands. Also considering the terrain of combat zones in the Pacific which has the likely chance to be rainy and muddy would be less than ideal for large tanks.
+
+Only one German Tiger tank was set to be sent to the Japanese via submarine but worsening war conditions prevented it from being delivered and was later destroyed by Allied Forces in Belgium. There was a possibility that the Japanese Military could have been in possession of Tiger Tanks. Although it wouldn’t have done much for them since an invasion of the Japanese mainland never came to be.
+
+- Mark Felton Productions ["The Japanese Tiger Tank" [YT 6:56]](https://www.youtube.com/watch?v=4AAik7LXwhM)
+- [How Imperial Japan Got Their Hands On A Tiger Tank Has An Interesting Explanation](https://worldwarwings.com/imperial-japan-got-hands-tiger-tank-interesting-explanation/)
+
 ### Kempeitai
 
 Japońska żandarmeria wojskowa 1881-1945 Japońskiej Armii Cesarskiej. Pełniła również funkcje tajnej policji politycznej oraz służby kontrwywiadu. Główne narzędzie terroru, porównywana z gestapo.
