--- a/src/content/fbposts/04-08.mdx
+++ b/src/content/fbposts/04-08.mdx
@@ -75,4 +75,5 @@ Walki o Popowice, podczas których 294 Dywizję Strzelecką wspierały IS-2 z 87
 ### Odnośniki
 
 - [Ostatni nalot na stolicę](http://www.zw.com.pl/artykul/453792.html)
+- footagefarm ["Color, 1945, Germany: Surrendering German Troops - 250088-06" [YT 17:42]](https://www.youtube.com/watch?v=cbnYdYqmef4)
 
