--- a/src/content/fbposts/04-23.mdx
+++ b/src/content/fbposts/04-23.mdx
@@ -16,6 +16,13 @@ Nadzieje berlińczyków na wyzwolenie miasta przez aliantów zachodnich. Samobó
 Bitwa pod Budziszynem. Wrocław: wiosna."
 ---
 
+### Avro Lancastrian
+
+FBTODO
+
+- [Avro Lancastrian](https://en.wikipedia.org/wiki/Avro_Lancastrian)
+- [Avro Lincoln](https://en.wikipedia.org/wiki/Avro_Lincoln) 1/5 ceny B-29
+
 ### Wstęp
 
 Poprzedni dzień zakończył się na tym, że 1 Front Białoruski wdarł się do Berlina od wschodu aż do Dahlwitz i okrążał go od północy docierając do mostu w Henningsdorf. Natomiast 1 Front Ukraiński zablokował Poczdam od południa i wschodu i dotarł do Kanału Teltow i bardziej na wschód przekroczył linię autostrady. Miał przy tym wręcz niemożliwie rozciągnięty obszar działania, począwszy od nieszczesnej 6 Armii, która od ponad dwóch miesięcy nie mogła zdobyć Wrocławia, przez 2 Armię WP, która była właśnie masakrowana przez wojska marszałka Schörnera pod Budziszynem, przez całe Łużyce aż po przedmieścia Berlina.
