--- a/src/content/fbarticles/armia-niemiecka.mdx
+++ b/src/content/fbarticles/armia-niemiecka.mdx
@@ -121,3 +121,4 @@ W języku polskim słowo pionier jest przestarzałe i już się go nie używa, a
 - ["16 marca 1935 r. – utworzenie Wehrmachtu"](http://blogpublika.com/2017/03/22/16-marca-1935-r-utworzenie-wehrmachtu/)
 - Mark Felton Productions ["Reichswehr - Germany's Forgotten Army" [YT 10:59]](https://www.youtube.com/watch?v=Ip-RZjKy8jA)
 - Three Arrows ["Was Every German Soldier Bad? - A Response" [YT 33:04]](https://www.youtube.com/watch?v=Fu-MDEXwV4s)
+- Military History not Visualized ["Why German Commanders kept Fighting" [YT 22:02]](https://www.youtube.com/watch?v=WSytstL9mK4)
