--- a/src/content/fbposts/04-17.mdx
+++ b/src/content/fbposts/04-17.mdx
@@ -18,6 +18,17 @@ Koniew przekroczył Szprewę. Stalin pozwolił mu zaatakować Berlin. Obie polsk
 We Wrocławiu bez zmian."
 ---
 
+### Hannie Schaft "dziewczyna z rudymi włosami"
+
+FBTODO
+
+- WarsofTheWorld [Hannie Schaft](https://en.wikipedia.org/wiki/Hannie_Schaft)
+- ["The Girls Who Seduced And Killed Nazi Soldiers" [YT 28:11]](https://www.youtube.com/watch?v=VJPX5FdES0M)
+
+### Holandia
+
+Wprawdzie rozkaz Nerona nie został wprowadzony w życie, to jednak w pewnej mierze Niemcom udawało sie wprowadzić taktykę spalonej ziemi, szczególnie na obcych terytoriach. Najbardziej znanym przykładem takiego sabotażu było zniszczenie urządzeń melioracyjnych na Błotach Pontyjskich w maju 1944. Podobnej rzeczy usiłowali dokonać w Holandii, od dawna usiłowali wydrążyć w zaporze Wieringermeer otwory na ładunki wybuchowe, ale zatrudnieni przy tym miejscowi z oczywistych powodów nie pracowali wydajnie. W końcu ściągnęli ich pod bronią i zmusili do dokończenia pracy. Eksplozja była dość ograniczona i polder tonął powoli. Nie było ofiar w ludziach. Dość szybko udało się przywrócić pierwotny stan, bo polder zalała słodka woda.
+
 ### Kapitulacja Grupy Armii B / Zagłębie Ruhry
 
 17 kwietnia otoczona w Zagłębiu Ruhry Grupa Armii "B" feldmarszałka Walthera Modela skapitulowała. Do niewoli dostało się 300 tysięcy żołnierzy Wehrmachtu.
@@ -105,10 +116,6 @@ Rocznica zatopienia Titanica nikogo w Niemczech nie obeszła. W warunkach wojenn
 Daleko za linią frontu, na tyłach trwała podstępna, skomplikowana wojna. 17 kwietnia 1945 oddział UPA dokonał masakry polskiej ludności w odległej o 30 km wsi Wiązownica (koło Jarosławia). Szybko zareagowała polska samoobrona wypierając wroga. Zginęło ok 100 Polaków i kilkunastu napastników. Atak UPA był zapewne odpowiedzią na zamordowanie 31 marca przez samoobronę wsi 10 bezbronnych Ukraińców, głównie kobiet i dzieci. Ta z kolei zbrodnia też była odpowiedzią - na zabicie Polaka.
 
 Dziwnie pasuje tu meldunek ze wzgórz Seelow - "*Nie wiem jak długo to może potrwać*".
-
-### Holandia
-
-Wprawdzie rozkaz Nerona nie został wprowadzony w życie, to jednak w pewnej mierze Niemcom udawało sie wprowadzić taktykę spalonej ziemi, szczególnie na obcych terytoriach. Najbardziej znanym przykładem takiego sabotażu było zniszczenie urządzeń melioracyjnych na Błotach Pontyjskich w maju 1944. Podobnej rzeczy usiłowali dokonać w Holandii, od dawna usiłowali wydrążyć w zaporze Wieringermeer otwory na ładunki wybuchowe, ale zatrudnieni przy tym miejscowi z oczywistych powodów nie pracowali wydajnie. W końcu ściągnęli ich pod bronią i zmusili do dokończenia pracy. Eksplozja była dość ograniczona i polder tonął powoli. Nie było ofiar w ludziach. Dość szybko udało się przywrócić pierwotny stan, bo polder zalała słodka woda.
 
 ### Wrocław
 
